err/proxypypi.err
Listing '.'...
Listing './bin'...
Compiling './bin/bottle.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/bottle-0.12.13.egg-info'...
Listing './lib/python3.5/site-packages/distlib'...
Listing './lib/python3.5/site-packages/distlib/_backport'...
Listing './lib/python3.5/site-packages/distlib-0.2.6.dist-info'...
Listing './lib/python3.5/site-packages/gunicorn'...
Listing './lib/python3.5/site-packages/gunicorn/app'...
Listing './lib/python3.5/site-packages/gunicorn/http'...
Listing './lib/python3.5/site-packages/gunicorn/instrument'...
Listing './lib/python3.5/site-packages/gunicorn/workers'...
Listing './lib/python3.5/site-packages/gunicorn-19.7.1.dist-info'...
Listing './lib/python3.5/site-packages/lockfile'...
Listing './lib/python3.5/site-packages/lockfile-0.12.2.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/proxypypi'...
Compiling './lib/python3.5/site-packages/proxypypi/daemon.py'...
***   File "./lib/python3.5/site-packages/proxypypi/daemon.py", line 57
    pid_fd = os.open(self.pid_file, os.O_RDWR|os.O_CREAT, 0644)
                                                             ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/proxypypi-1.2.2.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
